Tweaks to app page

--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -1,7 +1,7 @@
 
 $main-spot-colour: #ad832c;// #c5aa67;
 $alt-spot-colour: #6d96d5;
-$dark-background-colour: #626265;
+$dark-background-colour: #414142;// #626265;
 $light-background-colour: #c3d5d4;
 $icon-colour: darken($dark-background-colour, 5);
 $control-border-colour: darken($dark-background-colour, 10);
