--- a/src/web.public/public/stylesheets/partials/_links.scss
+++ b/src/web.public/public/stylesheets/partials/_links.scss
@@ -56,6 +56,8 @@
 // AD
 
 footer .call-to-action {
+  font-size: 14px;
+
   a, a:link, a:visited, a:hover, a:active {
     color: $alt-black-colour;
     text-decoration: none;
