--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -9,11 +9,12 @@ $alt-black-colour: $dark-background-colour; //lighten(black, 20);
 $text-light-colour: lighten($dark-background-colour, 20);
 $error-colour: #a03d34;
 $warning-colour: $alt-spot-colour;
-$main-links-colour: darken($main-spot-colour, 10);
+$main-links-colour: darken($alt-spot-colour, 10);
 $disabled-text-colour: #bbb;
 $normal-border-radius: 6px;
 //$body-font-family: 300 "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-$body-font-family: 400 14px/1.6 'Open Sans', Verdana, Helvetica, sans-serif;
+//$body-font-family: 400 14px/1.6 'Open Sans', Verdana, Helvetica, sans-serif;
+$body-font-family: 400 16px/1.6 'Noto Sans', serif;
 $header-font-family: 400 60px/1.3 'Bree Serif', Georgia, serif;
 $menu-arrow-size: 7px;
 $website-max-width: 1200px;
