--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -120,42 +120,16 @@ p.body-text {
   }
 }
 
-footer .call-to-action {
-  background-color: lighten($alt-spot-colour, 20);
-  height: 28px;
-  line-height: 28px;
-  margin: 0px 18px;
-  text-align: center;
-  border: 1px solid $control-border-colour;
-  border-bottom: none;
-  @include border-top-radius(6px);
-}
-
 .rule {
   height: 2px;
   border-top: 1px solid black; //darken($dark-background-colour, 10);
   border-bottom: 1px solid lighten($dark-background-colour, 30);
 }
 
-.footer-copyright {
-  p {
-    font-size: 9px;
-    color: lighten($dark-background-colour, 15);
-    text-align: center;
-
-    img {
-      display: none;
-
-      @include mq($from: tablet) {
-        display: block;
-        position: absolute;
-        bottom: 16px;
-        right: 0px;
-        width: 200px;
-        height: 58px;
-      }
-    }
-  }
+.copyright-wrapper p {
+  font-size: 9px;
+  color: lighten($dark-background-colour, 25);
+  text-align: center;
 }
 
 .spinner {
@@ -443,6 +417,9 @@ footer .call-to-action {
   }
 
   .body-wrapper {
+    //@include clearfix;
+    //position: relative;
+
     @include mq($from: mobile-landscape) {
       margin-left: 140px;
     }
@@ -536,13 +513,14 @@ footer .call-to-action {
   }
 
   .screen-shots {
-    clear: both;
-    @include clearfix;
+    //clear: both;
+    //@include clearfix;
 
     @include mq($from: desktop) {
       position: absolute;
       right: 0px;
       top: 75px;
+     // padding-top: 70px;
     }
 
     h2 {
