--- a/src/web.public/public/stylesheets/partials/_layout.scss
+++ b/src/web.public/public/stylesheets/partials/_layout.scss
@@ -1,16 +1,43 @@
 // STICKY FOOTER
 
-// http://pixelsvsbytes.com/blog/2011/09/sticky-css-footers-the-flexible-way/
-html, body { height: 100%; }
-body { display: table; min-width: 320px; width: 100%; }
-main { height: auto; }
-header, main, footer { display: table-row; }
-header, footer { height: 1px; }
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin: 0px 0px 85px;
+
+  @include mq($from: mobile-landscape) {
+    margin: 0px 0px 92px;
+  }
+
+  @include mq($from: tablet) {
+    margin: 0px 0px 150px;
+  }
+}
+
+footer {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 85px;
+
+  @include mq($from: mobile-landscape) {
+    height: 92px;
+  }
+
+  @include mq($from: tablet) {
+    height: 150px;
+  }
+}
+
 
 // Sticky footer adjustment
 #home-page {
   margin-top: 30px;
-  margin-bottom: 150px;
+  margin-bottom: 85px;
 }
 
 // HEADER LAYOUT
@@ -124,7 +151,7 @@ main .main-wrapper {
 
 // FOOTER
 
-footer .footer-call-to-action-wrapper {
+footer .call-to-action-link-wrapper {
   max-width: 500px;
   margin-left: auto;
   margin-right: auto;
@@ -157,7 +184,7 @@ footer .footer-centering-wrapper {
 
 // FOOTER NAVIGATION
 
-.footer-nav {
+.footer-menu {
   float: right;
   position: relative;
   left: -50%;
@@ -189,7 +216,7 @@ footer .footer-centering-wrapper {
 
 // FOOTER COPYRIGHT
 
-.footer-copyright {
+.copyright-wrapper {
   clear: both;
   margin-left: auto;
   margin-right: auto;
