--- a/src/web.public/public/stylesheets/partials/_logos.scss
+++ b/src/web.public/public/stylesheets/partials/_logos.scss
@@ -1,44 +1,37 @@
-#home-page .akin-logo {
-  img {
-    display: block;
-    width: 190px;
-    height: 54px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 12px;
-    -ms-interpolation-mode: bicubic;
 
-    @include mq($from: tablet) {
-      width: 296px;
-      height: 84px;
-    }
+#home-page .akin-logo {
+  display: block;
+  width: 200px;
+  height: 53px;
+  margin: 0px auto 12px auto;
+
+  @include mq($from: tablet) {
+    width: 300px;
+    height: 80px;
   }
 }
 
 header .akin-logo {
-  display: inline-block;
+  width: 75px;
+  height: 20px;
+  margin: 7px 6px 0px 6px;
 
-  img {
-    width: 83px;
-    min-width: 83px;
-    height: 24px;
-    margin: 4px 6px 0px 6px;
-
-    @include mq($from: mobile-landscape) {
-      width: 121px;
-      min-width: 121px;
-      height: 35px;
-      margin: 0px 9px 0px 6px;
-    }
+  @include mq($from: mobile-landscape) {
+    width: 120px;
+    height: 32px;
+    margin: 0px 6px 0px 6px;
   }
 }
 
 footer .akin-logo {
+  display: none;
+
   @include mq($from: tablet) {
-    width: 80px;
-    height: 22px;
-    margin-left: 6px;
-    vertical-align: bottom;
-    margin-bottom: 4px;
+    display: block;
+    position: absolute;
+    bottom: 16px;
+    right: 0px;
+    width: 200px;
+    height: 53px;
   }
 }
