refactoring header and search box

--- a/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
+++ b/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
@@ -13,6 +13,7 @@
 .autocomplete ul {
   position: absolute;
   left: 0;
+  top: 28px;
   width: 100%;
   border-left: 1px solid $control-border-colour;
   border-right: 1px solid $control-border-colour;
