--- a/src/web.public/public/stylesheets/partials/_links.scss
+++ b/src/web.public/public/stylesheets/partials/_links.scss
@@ -15,8 +15,6 @@ a.underline-on-hover:hover { text-decoration: underline; }
 .social-media-links {
   a {
     display: block;
-    //background-image: url('/public/images/social-media-sprite-32.png');
-    //@include background-image-2x('/public/images/social-media-sprite-64.png', 64px, 32px);
     width: 32px;
     height: 32px;
 
@@ -87,7 +85,7 @@ footer {
     border-bottom: none;
     @include border-top-radius(6px);
     text-shadow: 0px 1px 0px darken(white, 10);
-    color: $alt-black-colour;
+    color: black;
     font-weight: normal;
 
     @include mq($from: mobile-landscape) {
