--- a/src/web.public/public/stylesheets/partials/_custom-controls.scss
+++ b/src/web.public/public/stylesheets/partials/_custom-controls.scss
@@ -191,32 +191,6 @@ $searchbox-border-colour: $control-border-colour;
 //  line-height: 28px;
 //}
 
-#home-page .search-input .autocomplete {
-  //border: 1px solid lighten($dark-background-colour, 40);
-  //@include border-top-radius(2px);
-  //@include border-bottom-radius(2px);
-  padding: 0px;
-
-  .input-wrapper input[type="text"] {
-    border: 1px solid lighten($dark-background-colour, 40);
-    border-right: none;
-  }
-
-  .submit-button-wrapper button {
-    border: 1px solid lighten($dark-background-colour, 40);
-    border-left: none;
-  }
-
-.input-wrapper {
-  //vertical-align: middle;
-  //border-width: 0px;
-  //margin: 0;
-  //padding: 0;
-  //position: absolute;
-
-}
-}
-
 .search-input {
   .autocomplete {
     display: table;
@@ -230,10 +204,11 @@ $searchbox-border-colour: $control-border-colour;
 
     input[type="text"] {
       width: 100%;
+      display: block;
       font-size: 16px;
       height: 28px;
       padding: 0px 30px 0px 3px;
-      line-height: 28px;
+      line-height: 26px;
       -webkit-appearance: none;
       -moz-appearance: none;
       border: 0;
@@ -250,30 +225,22 @@ $searchbox-border-colour: $control-border-colour;
     vertical-align: middle;
 
     button {
+      display: block;
       text-shadow: 0px 1px 0px darken(white, 20);
       @include linear-gradient(to top, #daa537, #d5b168, $fallback: #daa537);
       margin: 0px;
-      //padding: 0px 7px;
       border: none;
       border-image-width: 0px;
       width: 46px;
       height: 28px;
-      line-height: 24px;
+      line-height: 22px;
       font-size: 16px;
-      //margin: 1px 0 0 0 !important;
       background-color: black;
-      //vertical-align: middle;
       font-family: "icomoon";
       color: $icon-colour;
       padding: 0px;
       @include border-top-radius(0);
       @include border-bottom-radius(0);
-
-//      .icon:after {
-//        font-family: "icomoon";
-//        content: "!";
-//        color: $icon-colour;
-//      }
     }
   }
 }
@@ -283,9 +250,24 @@ $searchbox-border-colour: $control-border-colour;
   max-width: 400px;
   margin-left: auto;
   margin-right: auto;
+}
 
-  div button {
-    //height: 28px;
-    //margin: 0 !important;
+.searchbox {
+  padding: 0px 3px;
+
+  @include mq($from: mobile-landscape) {
+    padding: 0px;
+  }
+}
+
+#home-page .search-input .autocomplete{
+  .input-wrapper input[type="text"] {
+    border: 1px solid lighten($dark-background-colour, 0);
+    border-right: none;
+  }
+
+  .submit-button-wrapper button {
+    border: 1px solid lighten($dark-background-colour, 0);
+    border-left: none;
   }
 }
