Home page and header changes

--- a/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
+++ b/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
@@ -8,11 +8,8 @@
 .autocomplete ul {
   position: absolute;
   left: 0;
-  top: 27px;
+  top: 28px;
   width: 100%;
-  //border-left: 1px solid $control-border-colour;
-  //border-right: 1px solid $control-border-colour;
-  //border-bottom: 1px solid $control-border-colour;
   z-index: 1;
   background-color: white;
   padding-bottom: 3px;
@@ -44,19 +41,19 @@
     right: 49px;
     top: 0px;
     display: block;
-    width: 30px;
+    width: 28px;
     height: 28px;
     text-align: center;
     line-height: 28px;
 
-    @include mq($from: mobile-landscape) {
-      right: 46px;
-    }
+//    @include mq($from: mobile-landscape) {
+//      right: 46px;
+//    }
 
-    .icon:after {
+    .icon:before {
       font-family: "icomoon";
       content: "+";
-      color: $icon-colour;
+      color: lighten($icon-colour, 20);
     }
   }
 }
