--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -1,5 +1,5 @@
 
-$main-spot-colour: #ad832c;// #c5aa67;
+$main-spot-colour: darken(#ad832c, 4); //#ad832c;// #c5aa67;
 $alt-spot-colour: #6d96d5;
 $dark-background-colour: #414142;// #626265;
 $light-background-colour: #c3d5d4;
