--- a/src/web.public/public/stylesheets/partials/_custom-controls.scss
+++ b/src/web.public/public/stylesheets/partials/_custom-controls.scss
@@ -107,26 +107,27 @@ header .searchbox-wrapper {
 
   .platform-menu {
     button {
+      height: 28px;
       margin: 0px 3px 0px 0px;
       font-size: 14px;
-      line-height: 26px;
+      line-height: 28px;
       padding: 0px 8px;
       font-weight: normal;
-      min-width: 140px;
+      width: 140px;
+      //min-width: 140px;
+      display: block;
       position: relative;
-      //background: white;
-      //border: 1px solid $control-border-colour;
       border: 1px solid lighten($control-border-colour, 30);
-      @include border-top-radius(6px);
-      @include border-bottom-radius(6px);
-      //color: $text-light-colour;
+      @include border-top-radius(2px);
+      @include border-bottom-radius(2px);
       cursor: pointer;
       text-align: left;
-
       background-color: transparent;
       color: white;
-      //border-color: #aaa;
 
+      @include mq($from: wide) {
+        width: 145px;
+      }
 
       .caret:after
       {
@@ -134,15 +135,8 @@ header .searchbox-wrapper {
         right: 6px;
         font-family: "icomoon";
         content: "/";
-        color: $icon-colour;
-
         color: white;
       }
-    }
-
-    button:hover,
-    button:focus {
-      outline: 0;
     }
 
     .dropdown {
@@ -191,6 +185,14 @@ $searchbox-border-colour: $control-border-colour;
 //  line-height: 28px;
 //}
 
+.searchbox {
+  padding: 0px 3px;
+
+  @include mq($from: mobile-landscape) {
+    padding: 0px;
+  }
+}
+
 .search-input {
   .autocomplete {
     display: table;
@@ -212,6 +214,7 @@ $searchbox-border-colour: $control-border-colour;
       -webkit-appearance: none;
       -moz-appearance: none;
       border: 0;
+      @include border-left-radius(2px);
 
       @include mq($from: mobile-landscape) {
         margin-bottom: 0px;
@@ -227,7 +230,7 @@ $searchbox-border-colour: $control-border-colour;
     button {
       display: block;
       text-shadow: 0px 1px 0px darken(white, 20);
-      @include linear-gradient(to top, #daa537, #d5b168, $fallback: #daa537);
+      @include linear-gradient(to top, $main-spot-colour, lighten($main-spot-colour, 20), $fallback: lighten($main-spot-colour, 20));
       margin: 0px;
       border: none;
       border-image-width: 0px;
@@ -239,35 +242,30 @@ $searchbox-border-colour: $control-border-colour;
       font-family: "icomoon";
       color: $icon-colour;
       padding: 0px;
-      @include border-top-radius(0);
-      @include border-bottom-radius(0);
+      @include border-right-radius(2px);
+    }
+
+    button:active {
+      @include linear-gradient(to top, darken(#daa537, 15), darken(#d5b168, 15), $fallback: darken(#daa537, 15));
     }
   }
 }
 
-#home-page form.searchbox .search-input {
+#home-page .search-input {
   width: 95%;
   max-width: 400px;
   margin-left: auto;
   margin-right: auto;
-}
 
-.searchbox {
-  padding: 0px 3px;
+  .autocomplete{
+    .input-wrapper input[type="text"] {
+      border: 1px solid lighten($dark-background-colour, 0);
+      border-right: none;
+    }
 
-  @include mq($from: mobile-landscape) {
-    padding: 0px;
-  }
-}
-
-#home-page .search-input .autocomplete{
-  .input-wrapper input[type="text"] {
-    border: 1px solid lighten($dark-background-colour, 0);
-    border-right: none;
-  }
-
-  .submit-button-wrapper button {
-    border: 1px solid lighten($dark-background-colour, 0);
-    border-left: none;
+    .submit-button-wrapper button {
+      border: 1px solid lighten($dark-background-colour, 0);
+      border-left: none;
+    }
   }
 }
